--- a/aquabid/manifest.json
+++ b/aquabid/manifest.json
@@ -3,8 +3,9 @@
     "name": "aquabid",
     "short_name": "aquabid",
     "description": "aquabid extension",
-    "version": "0.0.4",
+    "version": "0.0.3",
     "minimum_chrome_version": "59",
+    "update_url": "http://github.com/joseph-jja/chrome-content-scripts/tree/master/aquabid/update.xml",
     
     "content_scripts": [{
       "matches": ["http://www.aquabid.com/*"],
