WIP options page to save and edit URLs

--- a/url-block/manifest.json
+++ b/url-block/manifest.json
@@ -21,6 +21,8 @@
         "webNavigation",
         "webRequest",
         "webRequestBlocking",
-        "<all_urls>"
-    ]
+        "<all_urls>",
+        "storage"
+    ],
+    "options_page": "options.html"
 }
