--- a/system-info/manifest.json
+++ b/system-info/manifest.json
@@ -3,7 +3,7 @@
     "name": "system-info",
     "short_name": "system-info",
     "description": "",
-    "version": "0.0.5",
+    "version": "0.0.6",
     "minimum_chrome_version": "50",
 
     "app": {
@@ -12,6 +12,6 @@
         }
     },
     "permissions": [{
-        "system": [ "cpu", "display", "memory", "storage" ]
+        "system": [ "cpu", "display", "memory", "storage", "network" ]
     }]
 }
