--- a/url-block/manifest.json
+++ b/url-block/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "URL Blocker",
     "manifest_version": 2,
-    "version": "0.0.1",
+    "version": "0.0.3",
     "content_scripts": [{
         "matches": ["<all_urls>"],
         "all_frames": true,
@@ -24,5 +24,6 @@
         "<all_urls>",
         "storage"
     ],
-    "options_page": "options.html"
+    "options_page": "options.html", 
+    "update_url": "http://github.com/joseph-jja/chrome-content-scripts/tree/master/url-block/update.xml"
 }
