--- a/aquabid/manifest.json
+++ b/aquabid/manifest.json
@@ -5,7 +5,7 @@
     "description": "aquabid extension",
     "version": "0.0.7",
     "minimum_chrome_version": "59",
-    "update_url": "http://github.com/joseph-jja/chrome-content-scripts/tree/master/aquabid/update.xml",
+    "update_url": "https://raw.githubusercontent.com/joseph-jja/chrome-content-scripts/master/aquabid/update.xml",
 
     "content_scripts": [{
         "matches": ["http://www.aquabid.com/*"],
