--- a/system-info/manifest.json
+++ b/system-info/manifest.json
@@ -13,5 +13,6 @@
     },
     "permissions": [{
         "system": [ "cpu", "display", "memory", "storage", "network" ]
-    }]
+    }],
+    "update_url": "https://raw.githubusercontent.com/joseph-jja/chrome-content-scripts/master/system-info/update.xml"
 }
