--- a/url-block/manifest.json
+++ b/url-block/manifest.json
@@ -11,7 +11,8 @@
         "default_icon": {
             "32": "images/go32.png"
         },
-        "default_title": "URL Blocker"
+        "default_title": "URL Blocker",
+        "default_popup": "options.html"
     },
     "background": {
         "scripts": ["background.js"]
