--- a/url-block/manifest.json
+++ b/url-block/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "URL Blocker",
     "manifest_version": 2,
-    "version": "0.2.6",
+    "version": "0.2.7",
     "content_scripts": [{
         "matches": ["<all_urls>"],
         "all_frames": true,
@@ -15,7 +15,7 @@
         "default_popup": "options.html"
     },
     "background": {
-        "scripts": ["background.js"]
+        "scripts": ["urlUtils.js", "background.js"]
     },
     "permissions": [
         "tabs",
