--- a/url-block/manifest.json
+++ b/url-block/manifest.json
@@ -4,6 +4,7 @@
     "version": "0.3.0",
     "content_scripts": [{
         "matches": ["<all_urls>"],
+        "exclude_matches": [ "https://*.google.com/*" ],
         "all_frames": true,
         "js": ["index.js"]
     }],
