remoce web request as it is not used

--- a/aquabid/manifest.json
+++ b/aquabid/manifest.json
@@ -23,9 +23,7 @@
     }],
 
     "permissions": [
-        "tabs",
-        "webNavigation",
-        "webRequest"
+        "tabs"
     ],
 
     "host_permissions": [
