--- a/onstep/package.json
+++ b/onstep/package.json
@@ -19,7 +19,8 @@
   "dependencies": {
     "electron": "35.0.0",
     "express": "4.21.2",
-    "react": "19.0.0"
+    "react": "19.0.0",
+    "serialport": "13.0.0"
   },
   "devDependencies": {
     "@babel/core": "7.26.9",
