--- a/onstep/package.json
+++ b/onstep/package.json
@@ -21,8 +21,7 @@
     "electron": "35.0.0",
     "express": "4.21.2",
     "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "serialport": "13.0.0"
+    "react-dom": "19.0.0"
   },
   "devDependencies": {
     "@babel/core": "7.26.9",
