update tracking page

--- a/onstep/package.json
+++ b/onstep/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "onstep",
+  "name": "OnStep",
   "version": "1.0.0",
   "description": "OnStep Desktop UI",
   "main": "js/server.js",
