--- a/onstep/package.json
+++ b/onstep/package.json
@@ -18,20 +18,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "electron": "35.0.0",
     "express": "4.21.2",
-    "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "react": "19.2.0",
+    "react-dom": "19.2.0"
   },
   "devDependencies": {
-    "@babel/core": "7.26.9",
-    "@babel/preset-env": "7.26.9",
-    "@babel/preset-react": "7.26.3",
+    "electron": "39.1.0",
+    "@babel/core": "7.28.5",
+    "@babel/preset-env": "7.28.5",
+    "@babel/preset-react": "7.28.5",
     "babel-loader": "10.0.0",
     "css-loader": "7.1.2",
     "js-beautify": "1.15.4",
     "style-loader": "4.0.0",
-    "webpack": "^5.98.0",
+    "webpack": "5.102.1",
     "webpack-cli": "6.0.1"
   }
 }
